--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
     <h1>hope</h1>
-    <p>hgtfrdesazsdxfcgvhbj</p>
+    <p>we provide solutions to world wide povrty</p>
 </html>
