--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <li><a href="#values">Values</a></li>
                 <li><a href="#team">Our Team</a></li>
                 <li><a href="#contact.html">Contact</a></li>
-                <li><a href="organisations.html">organisations</a></li>
+                <li><a href="#organisations.html">organisations</a></li>
             </ul>
         </nav>
     </header>
