--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
         <h1>About Us</h1>
         <nav>
             <ul>
-                <li><a href="#index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#mission">Mission</a></li>
                 <li><a href="#values">Values</a></li>
                 <li><a href="#team">Our Team</a></li>
-                <li><a href="#contact.html">Contact</a></li>
-                <li><a href="#organisations.html">organisations</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="organisations.html">organisations</a></li>
             </ul>
         </nav>
     </header>
