--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <style>
         body {
-    background-image: url(WhatsApp\ Image\ 2024-11-19\ at\ 23.02.15_8e74932f.jpg);
+    background-image: url(wp2566029.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -46,7 +46,7 @@
 
         <section id="mission">
             <h2>Our Mission</h2>
-              <div style="color: indigo;">
+              <div style="color: black">
                <p>Hope is not pretending that troubles do not exist. It's the hope that thay will not last forever. that hurts willl be healed and difficulties overcome. That we will be led out of the darkness and into the sunshine.
              Our mission is to empower individuals by providing easy access to a variety of organizations that can help them achieve their goals, whether personal or professional.</p>
               </div>
@@ -70,7 +70,7 @@
 
         <section style="color: cornflowerblue;">
             <h2>Our Team</h2>
-            <div style="color: indigo;">
+            <div style="color: black">
                 <p>Our services connect you to a network of care, H~O~P~E provides a single point of access to a diverse range of charitable organisations and resources. Our services empower individuals and communities to easily find and engage with the support they need, streamlining the process of giving and recieving help in times of need. One thing we understand is that your pain is real BUT so is H~O~P~E.</p>
               Our dedicated team is passionate about connecting individuals with the right organizations to help them succeed. We come from diverse backgrounds and bring a wealth of experience to the table.</p>
             </div>
@@ -106,7 +106,7 @@ body {
 }
 
 header {
-    background: indigo;
+    background: green;
     color: aqua;
     padding: 10px 0;
     text-align: center;
