--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="organization.html">Organizations</a></li>
+                <li><a href="organisation.html">Organisations</a></li>
             </ul>
         </nav>
     </header>
@@ -45,6 +45,7 @@
 
         <section id="organizations">
             <h2>Our Organizations</h2>
+            <li><a href="organisation.html">Organisations</a></li>
             <div class="organization" onclick="accessOrganization('Org 1')">
                 <h3 style="color: black">Fred and Martie Soup Kitchen</h3>
                 <p></p>
@@ -175,7 +176,7 @@ footer {
 <script>
 
 function accessOrganization(orgName) {
-    alert('Accessing ' + orgName + '...');
+    alert('Accessing ' + orgName + '...');  
     // Here , you can implement the logic to access the selected organization
 }
 
