--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
             </div>
             <div class="organization" onclick="accessOrganization('Org 2')">
                 <h3 style="color:black;">Kingdom Faith Outreach Ministry</h3>
-                <p>A brief description of Organization 2.</p>
+                <p>
+
+At Kingdom Faith Outreach Ministries, we are dedicated to spreading hope, love, and support to individuals and families in need. As a compassionate and faith-based organization, our mission is to transform lives through spiritual guidance, practical assistance, and community outreach.
+                </p>
             </div>
             <div class="organization" onclick="accessOrganization('Org 3')">
                 <h3 style="color: black">TTT Lewis Bereavement Services</h3>
-                <p>A brief description of Organization 3.</p>
+                <p>
+            At TTT Lewis Bereavement Services, we provide compassionate and comprehensive support to individuals and families during their time of loss. As a registered non-profit organization, our mission is to offer a comforting presence and practical assistance to help navigate the challenging journey of grief.</p>
             </div>
             <div class="organization" onclick="accessOrganization('Org 4')">
                 <h3 style="color: black;">Hotel Hope Ministries</h3>
