--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,16 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact-form">Contact</a></li>
-                <li><a href="organizations.html">Organizations</a></li>
+                <li><a href="organizations.html">Organisations</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
+            <button class="donate-button" onclick="openDonationModal()">Donate Now</button>
         </nav>
     </header>
     <style>
     
         body {
-        background-image: url(wp2566029.jpg);
+        background-image: url(R.jpeg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -34,8 +36,8 @@
         <section id="contact-info">
             <h2>Get in Touch</h2>
             <p>If you have any questions or need assistance, feel free to reach out to us!</p>
-            <p>Email: info@accessorganizations.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: nobuhlechandremeyi2007@gmail.com</p>
+            <p>Phone: 0765158064</p>
         </section>
 
         <section id="contact-form">
@@ -214,6 +216,20 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
+}
+
+.donate-button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.donate-button:hover {
+    background-color:black;
 }
 
 main {
