--- a/organisation.html
+++ b/organisation.html
@@ -15,12 +15,14 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="organisation.html">Organisations</a></li>
+                <li><a href="donate.html">Donate</a></li>
             </ul>
+            <button class="donate-button" onclick="openDonationModal()">Donate Now</button>
         </nav>
     </header>
     <style>
         body {
-          background-image: url(wp2566029.jpg);
+          background-image: url(R.jpeg);
           background-repeat: no-repeat;
           background-size: cover;
           line-height: 2.2; 
@@ -165,6 +167,20 @@ nav ul li a {
     text-decoration: none;
 }
 
+
+.donate-button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.donate-button:hover {
+    background-color:black;
+}
 main {
     padding: 20px;
 }
